# Firmware_NRF54

./: .gitignore  README.md  build.sh  flash.sh  ncs-env.sh  platformio.ini  rtt.sh
.github/workflows/: main.yaml  release.yml
docs/: LM20_NCS.md
scripts/: factory_config_gen.py  post_upload_reset.py
src/: bb_epaper  board_nrf54.c  board_nrf54.h  boot_screen.cpp  boot_screen.h  factory_config.c  factory_config.h  main.c  newlib_stubs.c  nrf54_gpio.c  nrf54_gpio.h  nrf54_zephyr_compat.h  nrf54_zephyr_time.c  opendisplay_battery.c  opendisplay_battery.h  opendisplay_ble.c  opendisplay_ble.h  opendisplay_button.c  opendisplay_button.h  opendisplay_buzzer.c  opendisplay_buzzer.h  opendisplay_config_parser.c  opendisplay_config_parser.h  opendisplay_config_storage.c  opendisplay_config_storage.h  opendisplay_constants.h  opendisplay_cs.c  opendisplay_cs.h  opendisplay_device_flags.h  opendisplay_display.cpp  opendisplay_display.h  opendisplay_display_color.c  opendisplay_epd_map.c  opendisplay_i2c.c  opendisplay_i2c.h  opendisplay_led.c  opendisplay_led.h  opendisplay_pipe.c  opendisplay_pipe.h  opendisplay_pipe_write.cpp  (+13 more)
zephyr/: CMakeLists.txt  app.overlay  prj.conf  prj_cs.conf  prj_lm20_extra.conf  prj_ncs.conf  prj_quiet.conf  prj_uart.conf  sysbuild.cmake
zephyr/boards/: xiao_nrf54lm20a_nrf54lm20a_cpuapp.conf  xiao_nrf54lm20a_nrf54lm20a_cpuapp.overlay
